--- a/pom.xml
+++ b/pom.xml
@@ -105,12 +105,20 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.2</version>
         </dependency>
+
         <!-- For h2 unit testing  -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.197</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- json dependency for serialising joda date time -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+            <version>2.8.7</version>
         </dependency>
 
 
